--- a/debian_package/v5.2dockerfile/e2paquetsubuntudock/Dockerfile
+++ b/debian_package/v5.2dockerfile/e2paquetsubuntudock/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER "numsys - @ - free.fr"
 WORKDIR /home/compile
 ARG COMMIT
 ARG BUILD_DATE
-ENV VERSION 5.1
+ENV VERSION 5.2.0
 ENV OS ubuntu 
 
 LABEL commit.e2guardian=$COMMIT build_date.e2guardian=$BUILD_DATE
@@ -36,7 +36,9 @@ libclamav-dev libpcre3-dev zlib1g-dev pkg-config libssl-dev libssl1.1 git ca-cer
 && apt-get install -y git binutils && git clone https://github.com/fredbcode/scripts \
 && cd scripts/debian_package \
 && cp /usr/sbin/e2guardian e2"$OS"_package/data/usr/sbin \
+&& cp /usr/share/e2guardian e2"$OS"_package/data/usr/share \
 && cp -Rf /etc/e2guardian e2"$OS"_package/data/etc/ \
+&& find e2"$OS"_package/data/etc/ -type f -name Makefil* -delete \
 && cp /home/compile/e2guardian-$VERSION/data/scripts/e2guardian.service e2"$OS"_package/data/lib/systemd/system \
 && VFULL=`/usr/sbin/e2guardian -v | sed -n 1p | cut -d " " -f 2` \
 && sed -i "s/Version:.*$/Version: "$VFULL"/g" e2"$OS"_package/control/control \
@@ -44,8 +46,8 @@ libclamav-dev libpcre3-dev zlib1g-dev pkg-config libssl-dev libssl1.1 git ca-cer
 && sed -i "s/Installed-Size:.*$/Installed-Size: "$SIZE"/g" e2"$OS"_package/control/control && cat e2"$OS"_package/control/control \  
 && ./rebuild.sh e2"$OS"_package \
 && OSFULL=`lsb_release -cs` \ 
-&& cp e2"$OS"_package.deb e2guardian_"$OS"_"$OSFULL"_package.deb \
-&& cp e2"$OS"_package.deb /home/compile/e2guardian_"$OS"_"$OSFULL"_package.deb
+&& cp e2"$OS"_package.deb e2guardian_"$VERSION"_"$OS"_"$OSFULL"_package.deb \
+&& cp e2"$OS"_package.deb /home/compile/e2guardian_"$VERSION"_"$OS"_"$OSFULL"_package.deb
 
 EXPOSE 8080
 CMD cp /home/compile/*.deb /tmp && /usr/sbin/e2guardian -N 
