--- a/debian_package/e2raspbian_package/data/etc/e2guardian/e2guardian.conf
+++ b/debian_package/e2raspbian_package/data/etc/e2guardian/e2guardian.conf
@@ -1,4 +1,4 @@
-# e2guardian config file for version 5.2.2
+# e2guardian config file for version 5.3.3
 
 #NOTE This file is only read at start-up
 #
@@ -142,6 +142,16 @@ logfileformat = 6
 # it has a different port.
 filterip =
 
+# loop prevention
+#
+# For loop prevention purposes list all IPs e2g can be reached on
+# Include all e2g host server IPs and any VIP used when when in an array.
+# Specify each IP on an individual checkip line.
+#
+# Defaults: Not set - no loop prevention 
+#         
+checkip = 127.0.0.1
+
 # the ports that e2guardian listens to.  Specify one line per filterip
 # line.  If both mapportstoips and mapauthtoports are set to 'on'
 # you can specify different authentication mechanisms per port but
@@ -154,7 +164,7 @@ filterports = 8080
 # number of filterip
 # If disabled will listen on all filterports on all filterips.
 # on (default) | off
-#mapportstoips = off
+mapportstoips = off
 
 #port for transparent https
 #if defined enables tranparent https
@@ -383,9 +393,11 @@ logclienthostnames = off
 # filtered and get it to just pass it straight through.
 # This setting also applies to content regular expression modification.
 # The value must not be higher than maxcontentramcachescansize
+# Do not set this too low as this will result in pages that contain a
+#  long preamble not being content filtered
 # The size is in Kibibytes - eg 2048 = 2Mb
 # use 0 to set it to maxcontentramcachescansize
-maxcontentfiltersize = 256
+maxcontentfiltersize = 1024
 
 # Max content ram cache scan size
 # This is only used if you use a content scanner plugin such as AV
@@ -648,6 +660,20 @@ enablessl = off
 # defaults to generatedcertstart + 10 years
 #genratedcertend =
 # generatedcertstart =
+
+#Use openssl configuration file
+# switch this on if you want e2g to read in openssl configuration
+# This is useful if you want to use a hardware acceleration engine.
+# default is off
+#useopensslconf = off
+#
+
+#Alternate openssl configuration file
+# only used if useopensslconf = on
+# default is to use standard openssl configuration file
+# only use this if an alternate openssl configuration file is used for e2g
+# opensslconffile = '/home/e2/openssl.conf'
+
 
 # monitor helper path 
 # If defined this script/binary will be called with start or stop appended as follows:-
