--- a/debian_package/e2debian-arm64_package/control/control
+++ b/debian_package/e2debian-arm64_package/control/control
@@ -3,7 +3,7 @@ Version: 5.3.3
 Architecture: arm64
 Maintainer: frederic Bourgeois <numsys@free.fr>
 Installed-Size: 4096
-Depends: adduser, libevent-pthreads-2.1-7, perl, libbz2-1.0, libc6 (>= 2.4), libgcc1 (>= 1:4.1.1), libpcre2-posix, libstdc++6 (>= 4.6), libtommath1, zlib1g (>= 1:1.1.4), libssl3
+Depends: adduser, libevent-pthreads-2.1-7, perl, libbz2-1.0, libc6 (>= 2.4), libgcc1 (>= 1:4.1.1), libpcre3, libstdc++6 (>= 4.6), libtommath1, zlib1g (>= 1:1.1.4), libssl3
 Suggests: squid, clamav (>= 0.80), clamav-freshclam
 Section: web
 Priority: optional
@@ -22,3 +22,4 @@ Description: Web content filtering
  .
  e2guardian requires squid or another similar caching proxy server
  on your local network.
+3
